# telock/pages/api/timetable/allScheduleStart.js
@@ -33,13 +33,13 @@ export default async function handler(req, res) {
     const rows = await sql(query);
 
     if (rows.length === 0) {
-      return res.status(404).json({ error: "No timetable found for today." });
+      return res.status(404).json({ error: "Nincs tanóra a mai nap!" });
     }
 
     res.status(200).json({ students: rows });
 
   } catch (error) {
-    console.error("Database error:", error);
-    res.status(500).json({ error: 'Database error occurred' });
+    console.error("Hiba az adatok lekérdezésekor.:", error);
+    res.status(500).json({ error: 'Hiba az adatok lekérdezésekor.' });
   }
 }
